--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -92,6 +92,33 @@ input {
     width: 9em;
 }
 
+figure {
+    margin: 1em auto;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+}
+
+figure p {
+    display: block;
+    margin: 0;
+    margin-block: 0;
+}
+
+figure p img {
+    display: block;
+}
+
+figcaption {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 5rem 1rem 1rem;
+    color: rgb(255, 255, 255);
+    background: linear-gradient(to top, hsla(230, 40%, 5%, 0.95), hsla(230, 40%, 5%, 0));
+}
+
 @media only screen and (max-width: 600px) {
 pre {
     margin: 0pt 0% 0pt 0%;
