--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -18,7 +18,7 @@
     <meta name = "twitter:description" content = "{{ page.description }}" />
     <meta name = "twitter:image" content = "https://carlkolon.com{{ page.image }}" />
     <meta name = "twitter:creator" content = "@CarlKolon" />
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
     {% if page.custom_css %}
       {% for stylesheet in page.custom_css %}
         <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/{{ stylesheet }}.css">
