--- a/_layouts/poem.html
+++ b/_layouts/poem.html
@@ -30,7 +30,7 @@
     <hr>
     <h2>{{ page.title }}</h2>
     <h3>{{ page.author }}</h3>
-    <p><a href = "/2022/12/10/stablepoetry.html">Back to Blog</a></p>
+    <p><a href = "/2022/12/18/stablepoetry">Back to Blog</a></p>
     {% for l in page.lines %}
         <div class = "gallery-block">
             <p class = "poem-text">{{ l }}</p>
