--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,47 +1,9 @@
-<!doctype html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" async
-    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-    <meta property = "og:title" content = "{{ page.title }}" />
-    <meta property = "og:type" content = "website" />
-    <meta property = "og:url" content = "https://carlkolon.com{{ page.url }}" />
-    <meta property = "og:image" content = "https://carlkolon.com{{ page.image }}" />
-    <meta property = "og:description" content = "{{ page.description }}" />
-    <meta property = "og:site_name" content = "Carl Kolon" />
-    <meta name = "twitter:card" content = "summary" />
-    <meta name = "twitter:site" content = "@CarlKolon" />
-    <meta name = "twitter:title" content = "{{ page.title }}" />
-    <meta name = "twitter:description" content = "{{ page.description }}" />
-    <meta name = "twitter:image" content = "https://carlkolon.com{{ page.image }}" />
-    <meta name = "twitter:creator" content = "@CarlKolon" />
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/media/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/media/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/media/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/media/favicon/site.webmanifest">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F69Q33WE13"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      
-      gtag('config', 'G-F69Q33WE13');
-    </script>
-  </head>
-  <body>
-    <h1>Blog</h1>
-    {% include navigation.html %}
-    <hr>
-    <h2>{{ page.title }}</h2>
-    <h3>{{ page.date | date_to_string}}</h3>
-    {{ content }}
-  </body>
-</html>
+---
+layout: base
+---
+<h1>Blog</h1>
+{% include navigation.html %}
+<hr>
+<h2>{{ page.title }}</h2>
+<h3>{{ page.date | date_to_string}}</h3>
+{{ content }}
