--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,10 +11,9 @@ footer {
     color: gray;
     font-size: small;
     font-style: italic;
-    text-align: center;
+    text-align: right;
     max-width: 900px;
     min-width: 265px;
-    padding-top: 20px;
 }
 
 h1 {
