--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -252,3 +252,8 @@ footer .license-icons img {
     vertical-align: text-bottom;
     display: inline-block;
 }
+
+#early-break {
+    font-size: 0;
+    position: absolute;
+}
