--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,12 @@
 ---
 layout: base
 ---
-<h1>{{ page.title }}</h1>
+<h1>
+  Carl Kolon
+  {% if page.title %}
+    <span style="color: #777">- {{ page.title }}</span>
+  {% endif %}
+</h1>
 {% include navigation.html %}
 <hr>
 {{ content }}
