--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,259 +1,262 @@
 body {
-    background-color: white;
-    font-family: 'Lora', serif;
-    margin: auto;
-    max-width: 900px;
-    min-width: 265px;
-    padding: 10px;
+  background-color: white;
+  font-family: "Lora", serif;
+  margin: auto;
+  max-width: 900px;
+  min-width: 265px;
+  padding: 10px;
 }
 
 footer {
-    color: gray;
-    font-size: small;
-    font-style: italic;
-    text-align: right;
-    max-width: 900px;
-    min-width: 265px;
+  color: gray;
+  font-size: small;
+  font-style: italic;
+  padding-top: 10px;
+  max-width: 900px;
+  min-width: 265px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 h1 {
-    color: #303030;
+  color: #303030;
 }
 
 table {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    border: 1px solid;
-    border-collapse: collapse;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid;
+  border-collapse: collapse;
 }
 
 th,
 td {
-    border: 1px solid;
-    padding: 5px;
+  border: 1px solid;
+  padding: 5px;
 }
 
 ul {
-    list-style-type: disc;
+  list-style-type: disc;
 }
 
 ol {
-    list-style-type: decimal;
+  list-style-type: decimal;
 }
 
 li {
-    margin: 5pt 0cm 5pt 0cm;
+  margin: 5pt 0cm 5pt 0cm;
 }
 
 p,
 .left-img {
-    margin: 5pt 0cm 5pt 0cm;
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-
-div {
-    margin-left: auto;
-    margin-right: auto;
+  margin: 5pt 0cm 5pt 0cm;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 
 nav {
-    margin: auto;
-    text-align: center;
+  margin: auto;
+  text-align: center;
 }
 
 code {
-    background-color: #FFFFDD;
+  background-color: #ffffdd;
 }
 
 img {
-    width: auto;
-    max-width: 100%;
-    height: auto;
-    margin: 0 auto;
-    display: block;
-    text-align: center;
+  width: auto;
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto;
+  display: block;
+  text-align: center;
 }
 
 .center {
-    margin: 0 auto;
-    display: block;
-    text-align: center;
+  margin: 0 auto;
+  display: block;
+  text-align: center;
 }
 
 blockquote {
-    background: #eee;
-    border-left: 2px solid rgb(56, 56, 56);
-    margin: 1.5em 10px;
-    padding: 0.5em 10px;
+  background: #eee;
+  border-left: 2px solid rgb(56, 56, 56);
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
 }
 
 blockquote p {
-    display: inline;
+  display: inline;
 }
 
 iframe {
-    width: 800px;
-    height: 450px;
+  width: 800px;
+  height: 450px;
 }
 
 sup {
-    vertical-align: top;
-    font-size: 0.7em;
+  vertical-align: top;
+  font-size: 0.7em;
 }
 
 input {
-    width: 9em;
+  width: 9em;
 }
 
 .img-caption {
-    text-align: center;
-    font-size: .9em;
-    font-weight: 500;
-    color: darkslategray;
+  text-align: center;
+  font-size: 0.9em;
+  font-weight: 500;
+  color: darkslategray;
 }
 
 .fim {
-    margin: 1em auto;
-    position: relative;
-    display: inline-block;
-    text-align: center;
+  margin: 1em auto;
+  position: relative;
+  display: inline-block;
+  text-align: center;
 }
 
 .fim p {
-    display: block;
-    margin: 0;
-    margin-block: 0;
+  display: block;
+  margin: 0;
+  margin-block: 0;
 }
 
 .fim p img {
-    display: block;
+  display: block;
 }
 
 .fim figcaption {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 5rem 1rem 1rem;
-    color: rgb(255, 255, 255);
-    background: linear-gradient(to top, hsla(230, 40%, 5%, 0.95), hsla(230, 40%, 5%, 0));
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 5rem 1rem 1rem;
+  color: rgb(255, 255, 255);
+  background: linear-gradient(
+    to top,
+    hsla(230, 40%, 5%, 0.95),
+    hsla(230, 40%, 5%, 0)
+  );
 }
 
 @media only screen and (max-width: 850px) {
-    pre {
-        margin: 0pt 0% 0pt 0%;
-        background-color: #FFFFDD;
-        overflow: auto;
-        padding: 5px;
-    }
+  pre {
+    margin: 0pt 0% 0pt 0%;
+    background-color: #ffffdd;
+    overflow: auto;
+    padding: 5px;
+  }
 
-    .gallery-block {
-        display: block;
-        width: 92%;
-        padding: 10px;
-        margin: 10px auto;
-        background-color: #DDDDDD;
-    }
+  .gallery-block {
+    display: block;
+    width: 92%;
+    padding: 10px;
+    margin: 10px auto;
+    background-color: #dddddd;
+  }
 
-    .phone-zoom {
-        zoom: 0.8;
-    }
+  .phone-zoom {
+    zoom: 0.8;
+  }
 
-    iframe {
-        width: 90vw;
-        height: 51vw;
-    }
+  iframe {
+    width: 90vw;
+    height: 51vw;
+  }
 }
 
 @media only screen and (min-width: 850px) {
-    pre {
-        margin: 10pt 10% 10pt 10%;
-        background-color: #FFFFDD;
-        overflow: auto;
-        padding: 10px;
-    }
+  pre {
+    margin: 10pt 10% 10pt 10%;
+    background-color: #ffffdd;
+    overflow: auto;
+    padding: 10px;
+  }
 
-    .gallery-block {
-        display: block;
-        width: 552px;
-        padding: 10px;
-        margin: 10px auto;
-        background-color: #DDDDDD;
-    }
+  .gallery-block {
+    display: block;
+    width: 552px;
+    padding: 10px;
+    margin: 10px auto;
+    background-color: #dddddd;
+  }
 }
 
 @media only screen and (max-width: 350px) {
-    nav {
-        font-size: 12px;
-    }
+  nav {
+    font-size: 12px;
+  }
 }
 
 @media only screen and (max-width: 265px) {
-    iframe {
-        width: 239px;
-        height: 135px;
-    }
+  iframe {
+    width: 239px;
+    height: 135px;
+  }
 }
 
 .MJXc-display {
-    overflow-x: auto;
-    overflow-y: hidden;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 #igraph {
-    margin: 0 auto;
-    text-align: center;
-    width: 100%;
-    height: 560px;
-    border: none;
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+  height: 560px;
+  border: none;
 }
 
 .highlight {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .outer {
-    text-align: center;
-    width: 100%;
-    background-color: white;
+  text-align: center;
+  width: 100%;
+  background-color: white;
 }
 
 .ind {
-    margin-left: 36pt;
+  margin-left: 36pt;
 }
 
 .inpage {
-    margin: 0cm 10% 10pt 10%;
+  margin: 0cm 10% 10pt 10%;
 }
 
 .block {
-    display: inline-block;
-    margin: .2rem;
-    background-color: white;
+  display: inline-block;
+  margin: 0.2rem;
+  background-color: white;
 }
 
 .current {
-    color: green;
-    font-weight: bold;
+  color: green;
+  font-weight: bold;
 }
 
 .poem-text {
-    margin-top: 0px;
-    text-align: center;
-    font-style: italic;
+  margin-top: 0px;
+  text-align: center;
+  font-style: italic;
 }
 
 footer .license-icons img {
-    vertical-align: text-bottom;
-    display: inline-block;
+  vertical-align: text-bottom;
+  display: inline-block;
 }
 
 #early-break {
-    font-size: 0;
-    position: absolute;
+  font-size: 0;
+  position: absolute;
 }
