--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,11 +2,11 @@
 <html prefix="og: https://ogp.me/ns#">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script
-      type="text/javascript"
-      async
-      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML"
+      src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"
     ></script>
+    <script src="/assets/scripts/reinitialize.js" defer></script>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <meta property="og:title" content="{{ page.title }}">
@@ -53,16 +53,14 @@
     <link rel="manifest" href="/assets/media/favicon/site.webmanifest">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
-      rel="stylesheet"
-    >
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400..700&display=swap" rel="stylesheet">
+
     {% if jekyll.environment == 'production' %}
       {% include analytics.html %}
     {% endif %}
   </head>
 
-  <body>
+  <body hx-boost="true" hx-ext="preload">
     {% include prompt.html %}
     {{ content }}
     {% include footer.html %}
