--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,12 @@ layout: base
 ---
 <h1>
   Carl Kolon
-  <span style="color: #777">- Blog</span>
+  <span class="muted">/ <a class="blog-header-link" href="/blog">Blog</a></span>
 </h1>
 {% include navigation.html %}
 <hr>
-<h2>{{ page.title }}</h2>
-<h3>{{ page.date | date_to_string }}</h3>
+<div class="blog-header">
+  <h1 class="blog-title">{{ page.title }}</h1>
+  <div class="post-date">{{ page.date | date_to_string }}</div>
+</div>
 {{ content }}
