--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,4 +1,10 @@
 ---
 ---
 @import "main";
-@import "pastie.css";
+@import "headers";
+@import "footer";
+@import "injected_prompt";
+@import "fancy_image";
+@import "tables";
+@import "blog_list";
+@import "default.css";
