--- a/_sass/blog_list.scss
+++ b/_sass/blog_list.scss
@@ -20,8 +20,12 @@
 
 .blog-header-link {
   text-decoration: none;
-  color: inherit;
   &:hover {
     text-decoration: underline;
   }
+}
+
+.blog-header a h1 {
+  text-decoration: none;
+  color: blue;
 }
