--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html prefix="og: https://ogp.me/ns#">
   <head>
+    <link rel="prefetch" href="/">
+    <link rel="prefetch" href="/blog/">
+    <link rel="prefetch" href="/research/">
+    <link rel="prefetch" href="/navy/">
+    <link rel="prefetch" href="/resume.pdf">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script
