--- a/_sass/headers.scss
+++ b/_sass/headers.scss
@@ -1,6 +1,5 @@
 h1 {
   color: #303030;
-  font-family: "Lora", serif;
   font-weight: 700;
 }
 
@@ -10,15 +9,15 @@ h1 .muted {
 }
 
 .blog-header {
-    margin-bottom:1.5em;
+  margin-bottom: 1.5em;
 }
 
 .blog-header h1 {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .blog-header .post-date {
-  margin-top: .25em;
+  margin-top: 0.25em;
   color: gray;
   font-size: small;
 }
