--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,10 +1,19 @@
 body {
   background-color: white;
-  font-family: "Lora", serif;
+  font-family: "Lora", "Lora Fallback", serif;
   margin: auto;
   max-width: 795px;
   min-width: 265px;
   padding: 10px;
+}
+
+@font-face {
+  font-family: "Lora Fallback";
+  src: local("Georgia");
+  size-adjust: 104%;
+  ascent-override: 92%;
+  descent-override: 30%;
+  line-gap-override: 0%;
 }
 
 ul {
