inline custom css and DRY

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -52,6 +52,30 @@
         line-gap-override: 0%;
       }
 
+      img {
+        max-width: 100%;
+        width: auto;
+        height: auto;
+        margin: 0 auto;
+        display: block;
+        text-align: center;
+      }
+
+      li {
+        margin: 5pt 0cm 5pt 0cm;
+      }
+
+      nav {
+        margin: auto;
+        text-align: center;
+      }
+
+      @media only screen and (max-width: 350px) {
+        nav {
+          font-size: 12px;
+        }
+      }
+
       h1 {
         color: #303030;
         font-weight: 700;
