--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,16 +12,22 @@
     <span class="license-icons">
       <img
         style="height: 15px;"
+        height="15px;"
+        width="15px;"
         src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"
         alt=""
       >
       <img
         style="height: 15px;"
+        height="15px;"
+        width="15px;"
         src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"
         alt=""
       >
       <img
         style="height: 15px;"
+        height="15px;"
+        width="15px;"
         src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"
         alt=""
       >
