--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,64 +29,7 @@
     >
     <meta name="twitter:creator" content="@CarlKolon">
     <meta name="description" content="{{ page.description }}">
-    <style>
-      /* Critical CSS */
-      body {
-        background-color: white;
-        font-family: 'Lora', 'Lora Fallback', serif;
-        margin: auto;
-        max-width: 795px;
-        min-width: 265px;
-        padding: 10px;
-      }
-
-      @font-face {
-        font-family: 'Lora Fallback';
-        src: local('Georgia');
-        size-adjust: 104%;
-        ascent-override: 92%;
-        descent-override: 30%;
-        line-gap-override: 0%;
-      }
-
-      img {
-        max-width: 100%;
-        height: auto;
-        margin: 0 auto;
-        display: block;
-        text-align: center;
-      }
-
-      li {
-        margin: 5pt 0cm 5pt 0cm;
-      }
-
-      nav {
-        margin: auto;
-        text-align: center;
-      }
-
-      @media only screen and (max-width: 350px) {
-        nav {
-          font-size: 12px;
-        }
-      }
-
-      h1 {
-        color: #303030;
-        font-weight: 700;
-      }
-
-      h1 .muted {
-        color: #666;
-        font-weight: 500;
-      }
-
-      nav {
-        margin: auto;
-        text-align: center;
-      }
-    </style>
+    {% include inline_css.html %}
 
     <link rel="preload" href="/assets/css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link
@@ -106,14 +49,6 @@
         crossorigin="anonymous"
       >
     </noscript>
-    {% if page.custom_css %}
-      {% for stylesheet in page.custom_css %}
-        <link
-          rel="stylesheet"
-          href="{{ site.baseurl }}/assets/css/{{ stylesheet }}.css"
-        >
-      {% endfor %}
-    {% endif %}
     <link
       rel="apple-touch-icon"
       sizes="180x180"
