cleanup and add scripts

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -84,7 +84,7 @@
     {% endif %}
   </head>
 
-  <body hx-boost="true" hx-ext="preload">
+  <body hx-boost="true">
     {{ content }}
     {% include footer.html %}
   </body>
