keywords and image size

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html prefix="og: https://ogp.me/ns#">
-  {% include head.html %}
+  <head>
+    {% include head.html %}
+  </head>
 
   <body hx-boost="true">
     {{ content }}
