--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@
     {% include head.html %}
     <meta property="og:type" content="article">
     <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
+    <meta property="article:author" content="https://carlkolon.com/">
   </head>
 
   <body hx-boost="true">
